--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body{
     height: 300px;
     width : 700px;
     border-radius: 5px;
-    box-shadow: 0px 5px 15px 0px;
     position: relative;
 }
 #start{
@@ -18,17 +17,17 @@ body{
     word-break: break-all;
     width:150px;
     height:100px;
-    border : 2px solid lightgrey;
+    border : 2px solid rgb(10, 10, 10);
     text-align: center;
     cursor: pointer;
     position: absolute;
     left:300px;
     top:50px;
-    color : lightgrey;
+    color : rgb(207, 14, 14);
 }
 #start:hover{
-    border: 3px solid lightseagreen;
-    color : lightseagreen;
+    border: 3px solid rgb(13, 207, 22);
+    color : rgb(55, 231, 20);
 }
 
 #qImg{
